# polydrome

./: Cargo.toml  README.md  SUBSONIC.md  flake.nix  rust-toolchain.toml
polydrome/: Cargo.toml
polydrome-axum-xml/: Cargo.toml
polydrome-axum-xml/src/: lib.rs
polydrome-subsonic/: Cargo.toml
polydrome-subsonic/src/: lib.rs  response.rs
polydrome/src/: main.rs
