[workspace]
resolver = "3"
members = [
  "polydrome",
  "polydrome-axum-xml",
  "polydrome-subsonic"
]

[workspace.dependencies]
axum = "0.8"
axum-macros = "0.5"
mime = "0.3"
quick-xml = { version = "0.38", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }